<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi_ros2_cv</name>
  <version>0.0.0</version>
  <description>ROS2 Package for Raspberry Pi Camera Modules using OpenCV</description>
  <maintainer email="sktlgt93@gmail.com">koh</maintainer>
  <license>MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
